--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>jts</artifactId>
             <version>1.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgis</groupId>
+            <artifactId>postgis-jdbc</artifactId>
+            <version>1.3.3</version>
+        </dependency>
     </dependencies>
 </project>
