--- a/log4j.properties
+++ b/log4j.properties
@@ -12,10 +12,10 @@ log4j.appender.console.layout.ConversionPattern=%-4r [%t] %-5p %c (%F:%L) - %m%n
 log4j.appender.console.Threshold=INFO
 
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%-4r [%t] %-5p %c - %m%n
+log4j.appender.file.layout.ConversionPattern=%-7r [%t] %-5p %c:%L - %m%n
 log4j.appender.file.file=log.txt
 log4j.appender.file.append=false
-log4j.appender.file.threshold=WARN
+log4j.appender.file.threshold=DEBUG
 
 log4j.appender.rolling.layout=org.apache.log4j.PatternLayout
 log4j.appender.rolling.layout.ConversionPattern=%-4r [%t] %c - %m%n
