Code refactoring and bugfixing.

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,7 +1,8 @@
 #log4j.debug=true
 #log4j.threshold=ERROR
 
-log4j.rootLogger=ALL, console, file, rolling
+#log4j.rootLogger=ALL, console, file, rolling
+log4j.rootLogger=ALL, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.file=org.apache.log4j.FileAppender
