FIX: labels positioning - labels were going up from the road, now they are laying on road.

--- a/properties/osm-generator.properties
+++ b/properties/osm-generator.properties
@@ -1,4 +1,4 @@
-output.dir=tiles
-source=osm/botanica.osm
-level.start=12
-level.end=18
+output.dir=tiles/test
+source=osm/диагональная-дорога-3.osm
+level.start=15
+level.end=20
