--- a/properties/osm-generator.properties
+++ b/properties/osm-generator.properties
@@ -1,4 +1,4 @@
-output.dir=tiles/test
-source=osm/диагональная-дорога-3.osm
+output.dir=tiles/botanica
+source=osm/botanica.osm
 level.start=15
 level.end=20
