--- a/log4j.properties
+++ b/log4j.properties
@@ -2,7 +2,7 @@
 #log4j.threshold=ERROR
 
 #log4j.rootLogger=ALL, console, file, rolling
-log4j.rootLogger=ALL, console
+log4j.rootLogger=INFO, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.file=org.apache.log4j.FileAppender
