--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
       <artifactId>HikariCP</artifactId>
       <version>2.7.6</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
+    </dependency>
   </dependencies>
 
   <build>
