--- a/properties/application.properties
+++ b/properties/application.properties
@@ -3,9 +3,9 @@ level.start=10
 level.end=20
 tile.size=512
 
-osm.file=osm/botanica.osm
+osm.file=osm/Кишинев.osm
 
 db.url=jdbc:postgresql://localhost:5432/
 db.login=postgres
 db.password=postgres
-db.name=botanica
+db.name=kishinev
