--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
       <artifactId>gson</artifactId>
       <version>2.8.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.0.6.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
