--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,6 @@ tiles/*
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -25,3 +19,6 @@ tiles/*
 hs_err_pid*
 
 *.DS_Store
+*.iml
+.idea/*
+target/*
