Use absolute path for tile cache

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -1,6 +1,6 @@
 output.dir=tiles/kishinev
-level.start=10
-level.end=20
+level.start=13
+level.end=21
 tile.size=512
 
 osm.file=osm/Кишинев.osm
@@ -11,7 +11,8 @@ db.password=postgres
 db.name=kishinev
 
 cache.enabled=true
-cache.dir=tiles/cache
+#cache.dir=/Users/sergpank/WORK/harta/cache
+cache.dir=/home/ubuntu/cache
 
 debug.tile.number=false
 debug.tile.border=false
