POC everything is way

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -10,9 +10,9 @@ db.login=postgres
 db.password=postgres
 db.name=kishinev
 
-cache.enabled=true
+cache.enabled=false
 #cache.dir=/Users/sergpank/WORK/harta/cache
 cache.dir=/home/ubuntu/cache
 
-debug.tile.number=false
-debug.tile.border=false
+debug.tile.number=true
+debug.tile.border=true
