--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -10,7 +10,7 @@ db.login=postgres
 db.password=postgres
 db.name=kishinev
 
-cache.enabled=true
+cache.enabled=false
 #cache.dir=/Users/sergpank/WORK/harta/cache
 cache.dir=/home/ubuntu/cache
 
