Update application properties without server restart

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -1,4 +1,4 @@
-output.dir=tiles/kishinev
+output.dir=/onemap/kishinev
 level.start=13
 level.end=21
 tile.size=512
@@ -11,8 +11,7 @@ db.password=postgres
 db.name=kishinev
 
 cache.enabled=false
-#cache.dir=/Users/sergpank/WORK/harta/cache
-cache.dir=/home/ubuntu/cache
+cache.dir=/onemap/cache
 
 debug.tile.number=true
 debug.tile.border=true
