DRAW CONTOUR FOR TEXT (Street name OR House number)

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -13,5 +13,5 @@ db.name=kishinev
 cache.enabled=false
 cache.dir=/onemap/cache
 
-debug.tile.number=true
-debug.tile.border=true
+debug.tile.number=false
+debug.tile.border=false
