--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -1,9 +1,9 @@
-output.dir=/onemap/kishinev
+output.dir=tiles/kishinev
 level.start=11
 level.end=21
 tile.size=512
 
-osm.file=/Users/sergpank/WORK/onemap/osm/kishinev.osm
+osm.file=osm/Kishinev/kishinev-simple.osm
 
 db.url=jdbc:postgresql://localhost:5432/
 db.login=postgres
@@ -14,4 +14,4 @@ cache.enabled=false
 cache.dir=/onemap/cache
 
 debug.tile.number=false
-debug.tile.boundary=false
+debug.tile.border=false
