UI for street search

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -10,7 +10,7 @@ db.login=postgres
 db.password=postgres
 db.name=kishinev
 
-cache.enabled=false
+cache.enabled=true
 cache.dir=/onemap/cache
 
 debug.tile.number=false
