- Add db.max.pool.size property = 50

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -9,6 +9,7 @@ db.url=jdbc:postgresql://localhost:5432/
 db.login=postgres
 db.password=postgres
 db.name=kishinev
+db.max.pool.size=50
 
 cache.enabled=true
 cache.dir=/onemap/cache
