- Do not draw buildings on levels < 15

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -15,4 +15,5 @@ cache.enabled=true
 cache.dir=/onemap/cache
 
 debug.tile.number=false
-debug.tile.border=false
+debug.tile.border=true
+debug.tile.time=true
