--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -1,19 +1,19 @@
 output.dir=tiles/kishinev
 level.start=11
-level.end=21
+level.end=22
 tile.size=256
 
-osm.file=osm/Kishinev/kishinev-simple.osm
+osm.file=osm/7km/7km.osm
 
 db.url=jdbc:postgresql://localhost:5432/
 db.login=postgres
 db.password=postgres
-db.name=kishinev
+db.name=km7
 db.max.pool.size=50
 
-cache.enabled=true
+cache.enabled=false
 cache.dir=/onemap/cache
 
 debug.tile.number=false
-debug.tile.border=true
-debug.tile.time=true
+debug.tile.border=false
+debug.tile.time=false
